--- a/Programs/Makefile
+++ b/Programs/Makefile
@@ -1,8 +1,10 @@
-#to use: make prog='program_name'
-INC= -I ''
-SRC= 
-all:
-	clear
-	gcc -o ${prog} ${prog}'.cpp' ${SRC}/*.c $(INC) -g -lopencv_core -lopencv_highgui -lopencv_imgproc -lopencv_video
+#to use: make type prog='program_name'
+INC= -I '/include'
+SRC= include
 
-	
+c:
+	clear
+	gcc -o ${prog} ${prog}'.c' -g 
+cpp:
+	clear
+	g++ -o ${prog} ${prog}.cc ${SRC}/*.cc $(INC) -g -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_ml -lopencv_video -lopencv_features2d -lopencv_calib3d -lopencv_objdetect -lopencv_contrib -lopencv_legacy -lopencv_stitching
