--- a/undergraduate/tcu/building-groovy-libraries/Jenkinsfile
+++ b/undergraduate/tcu/building-groovy-libraries/Jenkinsfile
@@ -12,5 +12,13 @@ pipeline {
                 sh './gradlew groovydoc'
             }
         }
+        stage('Launch Sonar'){
+            steps {
+                sh '/etc/sonarqube-5.6.6/bin/linux-x86-64/sonar.sh console'
+            }
+            steps {
+                sh '/etc/sonar-scanner-3.0.3.778-linux/bin/sonar-scanner'
+            }
+        }
     }
 }
